Add instructions to tacos page

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -40,10 +40,19 @@
         <h4>Instructions</h4>
         <ol>
             <li>Marinate skirt steaks in the morning until time to cook.</li>
+            <li>chop onions</li>
+            <li>slice limes</li>
+            <li>grill skirt steaks to preference</li>
+            <li>grill onions in tinfoil</li>
+            <li>oil pan and warm tortillas on both sides</li>
+            <li>chop your skirt steaks</li>
+            <li>fill tacos with pico, steak and onion</li>
+            <li>top with fresh squeezed lime</li>
 
 
 
     </ol>
+
 
 
 
