Structure and add content to page

--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
+
     <head>
-    <meta charset="en">
+    <meta charset="UTF-8">
     <title>Omelette</title>
 
 </head>
@@ -11,7 +12,22 @@
     
 
     <body>
+    
+    <h2>Omelette</h2>
 
+    <br>
+
+        <img src="https://images.immediate.co.uk/production/volatile/sites/30/2020/08/omelette-3cba9f8.jpg?quality=90&webp=true&resize=300,272"
+        height="230" width="230">
+    <br>
+
+        <h3>Description:</h3>
+            <p>An omelette is a quick and easy way to take a healthy daily dose of eggs and spice it up a little
+                <br>
+                Pick up your eggs and lets get crackin'.
+            </p>
+
+            <h4>Ingredients</h4>
 
 
 
