Complete ingredients and instructions

--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -27,7 +27,35 @@
                 Pick up your eggs and lets get crackin'.
             </p>
 
-            <h4>Ingredients</h4>
+                <h4>Ingredients</h4>
+                <ul>
+                <li>butter</li>
+                <li>2 eggs</li>
+                <li>milk</li>
+                <li>salt</li>
+                <li>pepper</li>
+                <li>shredded cheese</li>
+                
+            
+            </ul>
+
+
+            <h4>Instructions</h4>
+            <ol>
+                <li>crack eggs into mixing bowl</li>
+                <li>add a splash of milk</li>
+                <li>salt and pepper to taste</li>
+                <li>add egg mixture to buttered and heated skillet</li>
+                <li>cook omellete on both sides</li>
+                <li>transfer from skillet to plate</li>
+                <li>immediately top with shredded cheese</li>
+
+
+
+
+
+            </ol>
+
 
 
 
