Add recipes and instructions to page

--- a/recipes/chicken-salad.html
+++ b/recipes/chicken-salad.html
@@ -27,8 +27,30 @@
         </p>
 
             <h4>Ingredients</h4>
+            <ul>
+            <li>Rotisserie Chicken</li>
+            <li>Mayonnaise</li>
+            <li>salt</li>
+            <li>pepper</li>
+            <li>onions</li>
+            <li>celery</li>
 
-</body>
+
+        </ul>    
+            
+
+            <h4>Instructions</h4>
+            <ol>
+                <li>chop chicken into bite sized cubes</li>
+                <li>chop celery and onions to bite sized</li>
+                <li>add chicken and vegetables to mixing bowl</li>
+                <li>add Mayonnaise to preferred consistency</li>
+                <li>salt and pepper to taste</li>
+
+
+        </ol>
+        
+        </body>
 
 
 
