Fix non-uniform instruction grammar

--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+
 <html lang="en">
 
-<head>
-<meta charset="UTF-8">
-<title>Taco Recipe</title>
+    <head>
+    <meta charset="UTF-8">
+    <title>Taco-Recipe</title>
 
 
 </head>
@@ -39,7 +40,7 @@
 
         <h4>Instructions</h4>
         <ol>
-            <li>Marinate skirt steaks in the morning until time to cook.</li>
+            <li>marinate skirt steaks in the morning until time to cook</li>
             <li>chop onions</li>
             <li>slice limes</li>
             <li>grill skirt steaks to preference</li>
